--- a/DrawCardGame/Views/DrawCardWindow.xaml
+++ b/DrawCardGame/Views/DrawCardWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="DrawCardGame.DrawCardWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:wpfAnimatedGif="http://wpfanimatedgif.codeplex.com"
         Title="抽卡界面" Height="300" Width="400"
         Background="White"
         Loaded="Window_Loaded">
@@ -23,39 +24,9 @@
                    Margin="0,30,0,0"
                    VerticalAlignment="Top"/>
 
-        <!-- 卡片框 -->
-        <Grid VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,0,0,30">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="4*" />
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="4*" />
-            </Grid.ColumnDefinitions>
-
-            <!-- 卡片 1 -->
-            <Border Grid.Column="0" Width="80" Height="120" Background="#EEE"
-                    BorderBrush="Black" BorderThickness="1" CornerRadius="6"
-                    HorizontalAlignment="Right" Margin="0,0,40,0">
-                <Image x:Name="Card1Image"
-                       Width="70" Height="110"
-                       Stretch="Uniform"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"/>
-            </Border>
-
-            <!-- 卡片 2 -->
-            <Border Grid.Column="2" Width="80" Height="120" Background="#EEE"
-                    BorderBrush="Black" BorderThickness="1" CornerRadius="6"
-                    HorizontalAlignment="Left" Margin="40,0,0,0">
-                <Image x:Name="Card2Image"
-                       Width="70" Height="110"
-                       Stretch="Uniform"
-                       HorizontalAlignment="Center"
-                       VerticalAlignment="Center"/>
-            </Border>
-        </Grid>
-
         <!-- 抽卡按钮 -->
-        <Button Content="开始抽卡"
+        <Button x:Name="DrawCardButton"
+                Content="开始抽卡"
                 Width="130" Height="35"
                 FontSize="14"
                 Click="DrawCardButton_Click"
@@ -63,15 +34,37 @@
                 VerticalAlignment="Bottom"
                 Margin="0,0,0,10"/>
 
-        <!-- 箱子图像（放大） -->
-        <Image Source="pack://application:,,,/Assets/70cb140ab63a37e7d6e669d5ef1c698453520970.png"
+        <!-- 卡片展示区域（动画结束后显示） -->
+        <Image x:Name="Card1Image"
+               Width="80" Height="120"
+               HorizontalAlignment="Left"
+               VerticalAlignment="Center"
+               Margin="50,0,0,0"
+               Visibility="Collapsed"
+               Opacity="0" />
+
+        <Image x:Name="Card2Image"
+       Width="80" Height="120"
+       HorizontalAlignment="Right"
+       VerticalAlignment="Center"
+       Margin="0,0,50,0"
+       Visibility="Collapsed"
+       Opacity="0" />
+
+
+
+        <!-- GIF 动画区域（默认可见） -->
+        <Image x:Name="OpenBoxGif"
                Width="150"
-               Height="94"
+               Height="100"
                HorizontalAlignment="Center"
                VerticalAlignment="Bottom"
-               Margin="0,0,0,45"/>
+               Visibility="Visible"
+               Margin="0,0,0,50"/>
     </Grid>
 </Window>
+
+
 
 
 
